# jobpulse-uk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: dashboard.py
artefacts/: salary_model.joblib
data/: jobpulse.duckdb
fixtures/: sample_jobs.parquet
src/jobpulse/: __init__.py  cli.py  config.py  models.py  storage.py
src/jobpulse/extract/: skills.py
src/jobpulse/ingest/: adzuna.py  mock.py  pipeline.py
src/jobpulse/ml/: salary.py
tests/: conftest.py  test_extract_skills.py  test_ingest_adzuna.py  test_ingest_mock.py  test_models.py  test_salary_model.py  test_storage.py
