[project]
name = "jobpulse-uk"
version = "0.1.0"
description = "End-to-end pipeline tracking UK AI & data jobs. Ingests, extracts skills with an LLM, predicts salaries, surfaces emerging role clusters."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Abas Ukanga" }]
keywords = ["jobs", "nlp", "llm", "machine-learning", "uk", "adzuna"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "duckdb>=1.1",
    "pyarrow>=17",
    "pandas>=2.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
]
# v0.2 role-clustering stack (see Roadmap in README). Heavy (pulls PyTorch via
# sentence-transformers); kept out of the default install + CI until it lands.
nlp = [
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
]
llm = [
    "anthropic>=0.39",
]
dashboard = [
    "streamlit>=1.39",
    "plotly>=5.24",
    "altair>=5.4",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "faker>=30.0",
    "respx>=0.21",
    "ipykernel>=6.29",
]

[project.scripts]
jobpulse = "jobpulse.cli:app"

[project.urls]
Homepage = "https://github.com/abasukanga/jobpulse-uk"
Repository = "https://github.com/abasukanga/jobpulse-uk"
Issues = "https://github.com/abasukanga/jobpulse-uk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobpulse"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pyflakes + pycodestyle
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "TID",              # tidy imports
    "TCH",              # type-checking imports
    "PL",               # pylint
    "PT",               # pytest
    "N",                # naming
]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
# typer requires Option(...)/Argument(...) calls in parameter defaults — B008 is a false positive here
"src/jobpulse/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["xgboost.*", "umap.*", "hdbscan.*", "sentence_transformers.*", "sklearn.*", "pandas.*", "joblib.*", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = ["error", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/jobpulse"]
branch = true
